src/main/java/parser/MINIGrammar.java
/* Generated By:JavaCC: Do not edit this line. MINIGrammar.java */
package parser;
import java.io.FileInputStream;
import java.io.File;
import java.io.FileNotFoundException;
import java.util.HashMap;
import components.*;
import components.types.*;
import components.helpers.Position;
import ir.Type;
import components.interfaces.*;
import java.util.ArrayList;
import testsuite.MINIException;
import frontend.MINIParser;

@SuppressWarnings("unused")
public class MINIGrammar implements MINIGrammarConstants {
  private static File currentFile;
  private static HashMap<String, String> tokenTable = new HashMap<String, String>();
  private static Position generatePosition(Token t) {
        Position p = new Position(currentFile, t.beginLine);
        return p;
  }
  private static String tokenify(Token t) {
        String token = tokenTable.get(t.image);

        if (token == null) {
          token = t.image;
          if (token.charAt(0) == '"') {
                token = token.substring(1, token.length() - 1);
          }
          tokenTable.put(t.image, token);
        }
        return token;
  }
  public static FileNode parse(File in) throws MINIException
  {
    currentFile = in;
    CompositeType.clear();
    ArrayType.clear();
    try
    {
      MINIGrammar parser = new MINIGrammar(new FileInputStream(in));
      return parser.file();
    }
    catch (FileNotFoundException e)
    {
      e.printStackTrace();
      return null;
    }
    catch (ParseException e)
    {
      MINIParser.handleParseError(in, e.currentToken, e.tokenImage, e.expectedTokenSequences);
      return null;
    }
    catch (TokenMgrError e) {
                MINIParser.handleTokenMgrError(in, e);
                return null;
    }
  }

  final public FileNode file() throws ParseException {
  FileNode f = new FileNode();
  ClassNode cls;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      cls = mini_class();
      f.classes.add(cls);
    }
    jj_consume_token(0);
    {if (true) return f;}
    throw new Error("Missing return statement in function");
  }

  final public ClassNode mini_class() throws ParseException {
  ClassNode cls;
  MemberNode classMember;
    jj_consume_token(CLASS);
    jj_consume_token(ID);
           cls = new ClassNode(tokenify(token), generatePosition(token));
    jj_consume_token(BRACE_OPEN);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ID:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      classMember = classMember();
      cls.addChild(classMember);
    }
    jj_consume_token(BRACE_CLOSE);
    {if (true) return cls;}
    throw new Error("Missing return statement in function");
  }

  final public MemberNode classMember() throws ParseException {
  MethodDeclarationNode m;
  Token memberName;
  TypeNode type;
    type = type();
    memberName = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SEMICOLON:
      jj_consume_token(SEMICOLON);
      {if (true) return new FieldNode(tokenify(memberName), type, generatePosition(memberName));}
      break;
    case PARAN_OPEN:
      m = method(memberName, type);
      {if (true) return m;}
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public MethodDeclarationNode method(Token name, TypeNode type) throws ParseException {
  BlockNode body;
  ArrayList<NamedType> arguments;
    arguments = signature();
    body = blockStatement();
    {if (true) return new MethodDeclarationNode(tokenify(name), type, arguments, body, generatePosition(name));}
    throw new Error("Missing return statement in function");
  }

  final public TypeNode type() throws ParseException {
  Token type;
  int dimensions = 0;
    type = jj_consume_token(ID);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ARRAY_BEGIN:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      jj_consume_token(ARRAY_BEGIN);
      jj_consume_token(ARRAY_END);
                                                 dimensions++;
    }
    {if (true) return new TypeNode(tokenify(type), dimensions, generatePosition(type));}
    throw new Error("Missing return statement in function");
  }

  final public ArrayList < NamedType > signature() throws ParseException {
  ArrayList < NamedType > arguments = new ArrayList < NamedType > ();
  TypeNode type;
    jj_consume_token(PARAN_OPEN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ID:
      type = type();
      jj_consume_token(ID);
      arguments.add(new NamedType(tokenify(token), type, generatePosition(token)));
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_4;
        }
        jj_consume_token(COMMA);
        type = type();
        jj_consume_token(ID);
        arguments.add(new NamedType(tokenify(token), type, generatePosition(token)));
      }
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    jj_consume_token(PARAN_CLOSE);
    {if (true) return arguments;}
    throw new Error("Missing return statement in function");
  }

  final public StatementNode statement() throws ParseException {
  StatementNode s = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BRACE_OPEN:
      s = blockStatement();
      break;
    case IF:
      s = ifStatement();
      break;
    case WHILE:
      s = whileStatement();
      break;
    case RETURN:
      s = returnStatement();
      break;
    case PARAN_OPEN:
    case THIS:
    case NULL:
    case NEW:
    case MINUS:
    case NEGATION:
    case BOOL:
    case ID:
    case INT:
    case STRING:
      s = simpleStatement();
      break;
    case VAR:
      s = declaration();
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

  final public StatementNode simpleStatement() throws ParseException {
  ExpressionNode first, second;
  Token position;
    first = expression7();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SEMICOLON:
      position = jj_consume_token(SEMICOLON);
                             {if (true) return new SimpleStatementNode(generatePosition(position), first);}
      break;
    case ASSIGNMENT:
      position = jj_consume_token(ASSIGNMENT);
      second = expression7();
      jj_consume_token(SEMICOLON);
                                                                      {if (true) return new AssignmentStatementNode(first, generatePosition(position), second);}
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public DeclarationStatementNode declaration() throws ParseException {
  Token name;
  ExpressionNode expression;
    jj_consume_token(VAR);
    jj_consume_token(ID);
           name = token;
    jj_consume_token(ASSIGNMENT);
    expression = expression7();
    jj_consume_token(SEMICOLON);
    {if (true) return new DeclarationStatementNode(tokenify(name), expression, generatePosition(name));}
    throw new Error("Missing return statement in function");
  }

  final public BlockNode blockStatement() throws ParseException {
  BlockNode block;
  StatementNode statement;
    jj_consume_token(BRACE_OPEN);
                   block = new BlockNode(generatePosition(token));
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BRACE_OPEN:
      case PARAN_OPEN:
      case THIS:
      case NULL:
      case NEW:
      case RETURN:
      case VAR:
      case IF:
      case WHILE:
      case MINUS:
      case NEGATION:
      case BOOL:
      case ID:
      case INT:
      case STRING:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_5;
      }
      statement = statement();
      block.children.add(statement);
    }
    jj_consume_token(BRACE_CLOSE);
    {if (true) return block;}
    throw new Error("Missing return statement in function");
  }

  final public IfNode ifStatement() throws ParseException {
  ExpressionNode condition;
  BlockNode first, second = null;
  Token position;
    position = jj_consume_token(IF);
    jj_consume_token(PARAN_OPEN);
    condition = expression7();
    jj_consume_token(PARAN_CLOSE);
    first = blockStatement();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      jj_consume_token(ELSE);
      second = blockStatement();
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    {if (true) return new IfNode(generatePosition(position), condition, first, second);}
    throw new Error("Missing return statement in function");
  }

  final public WhileNode whileStatement() throws ParseException {
  ExpressionNode condition;
  BlockNode body;
  Token position;
    position = jj_consume_token(WHILE);
    jj_consume_token(PARAN_OPEN);
    condition = expression7();
    jj_consume_token(PARAN_CLOSE);
    body = blockStatement();
    {if (true) return new WhileNode(generatePosition(position), condition, body);}
    throw new Error("Missing return statement in function");
  }

  final public ReturnNode returnStatement() throws ParseException {
  ExpressionNode returnValue;
  Token position;
    position = jj_consume_token(RETURN);
    returnValue = expression7();
    jj_consume_token(SEMICOLON);
    {if (true) return new ReturnNode(generatePosition(position), returnValue);}
    throw new Error("Missing return statement in function");
  }

  final public ExpressionNode expression7() throws ParseException {
  ExpressionNode current;
  ExpressionNode next;
  Token position;
  BinaryExpressionNode.Operator operator;
    current = expression6();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_6;
      }
      position = jj_consume_token(OR);
                      operator = BinaryExpressionNode.Operator.OR;
      next = expression6();
                           current = new BinaryExpressionNode(generatePosition(position), current, next, operator);
    }
    {if (true) return current;}
    throw new Error("Missing return statement in function");
  }

  final public ExpressionNode expression6() throws ParseException {
  ExpressionNode current;
  ExpressionNode next;
  Token position;
  BinaryExpressionNode.Operator operator;
    current = expression5();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case AND:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_7;
      }
      position = jj_consume_token(AND);
                       operator = BinaryExpressionNode.Operator.AND;
      next = expression5();
                           current = new BinaryExpressionNode(generatePosition(position), current, next, operator);
    }
    {if (true) return current;}
    throw new Error("Missing return statement in function");
  }

  final public ExpressionNode expression5() throws ParseException {
  ExpressionNode current;
  ExpressionNode next;
  Token position;
  BinaryExpressionNode.Operator operator;
    current = expression4();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQUAL:
      case NOTEQUAL:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_8;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQUAL:
        position = jj_consume_token(EQUAL);
                           operator = BinaryExpressionNode.Operator.SAME;
        break;
      case NOTEQUAL:
        position = jj_consume_token(NOTEQUAL);
                              operator = BinaryExpressionNode.Operator.NOTSAME;
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      next = expression4();
      current= new BinaryExpressionNode(generatePosition(position), current, next, operator);
    }
    {if (true) return current;}
    throw new Error("Missing return statement in function");
  }

  final public ExpressionNode expression4() throws ParseException {
  ExpressionNode current;
  ExpressionNode next;
  Token position;
  BinaryExpressionNode.Operator operator;
    current = expression3();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LESS_THAN_EQUAL:
      case GREATER_THAN_EQUAL:
      case LESS_THAN:
      case GREATER_THAN:
        ;
        break;
      default:
        jj_la1[14] = jj_gen;
        break label_9;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LESS_THAN_EQUAL:
        position = jj_consume_token(LESS_THAN_EQUAL);
                                     operator = BinaryExpressionNode.Operator.LTE;
        break;
      case GREATER_THAN_EQUAL:
        position = jj_consume_token(GREATER_THAN_EQUAL);
                                        operator = BinaryExpressionNode.Operator.GTE;
        break;
      case LESS_THAN:
        position = jj_consume_token(LESS_THAN);
                               operator = BinaryExpressionNode.Operator.LT;
        break;
      case GREATER_THAN:
        position = jj_consume_token(GREATER_THAN);
                                  operator = BinaryExpressionNode.Operator.GT;
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      next = expression3();
          current = new BinaryExpressionNode(generatePosition(position), current, next, operator);
    }
    {if (true) return current;}
    throw new Error("Missing return statement in function");
  }

  final public ExpressionNode expression3() throws ParseException {
  ExpressionNode current;
  ExpressionNode next;
  Token position;
  BinaryExpressionNode.Operator operator;
    current = expression2();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MINUS:
      case PLUS:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_10;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        position = jj_consume_token(PLUS);
                          operator = BinaryExpressionNode.Operator.PLUS;
        break;
      case MINUS:
        position = jj_consume_token(MINUS);
                           operator = BinaryExpressionNode.Operator.SUB;
        break;
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      next = expression2();
          current = new BinaryExpressionNode(generatePosition(position), current, next, operator);
    }
    {if (true) return current;}
    throw new Error("Missing return statement in function");
  }

  final public ExpressionNode expression2() throws ParseException {
  ExpressionNode current;
  ExpressionNode next;
  Token position;
  BinaryExpressionNode.Operator operator;
    current = expression1();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLY:
      case DIVIDE:
      case REMAINDER:
        ;
        break;
      default:
        jj_la1[18] = jj_gen;
        break label_11;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLY:
        position = jj_consume_token(MULTIPLY);
                              operator = BinaryExpressionNode.Operator.MUL;
        break;
      case DIVIDE:
        position = jj_consume_token(DIVIDE);
                            operator = BinaryExpressionNode.Operator.DIV;
        break;
      case REMAINDER:
        position = jj_consume_token(REMAINDER);
                               operator = BinaryExpressionNode.Operator.MOD;
        break;
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      next = expression1();
          current = new BinaryExpressionNode(generatePosition(position), current, next, operator);
    }
    {if (true) return current;}
    throw new Error("Missing return statement in function");
  }

  final public ExpressionNode expression1() throws ParseException {
  ExpressionNode current;
  Token position;
  UnaryExpressionNode.Operator operator;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
    case NEGATION:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NEGATION:
        position = jj_consume_token(NEGATION);
                                operator = UnaryExpressionNode.Operator.NEGATION;
        break;
      case MINUS:
        position = jj_consume_token(MINUS);
                             operator = UnaryExpressionNode.Operator.MINUS;
        break;
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      current = expression1();
        current = new UnaryExpressionNode(generatePosition(position), current, operator);
      break;
    case PARAN_OPEN:
    case THIS:
    case NULL:
    case NEW:
    case BOOL:
    case ID:
    case INT:
    case STRING:
      current = expression0();
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return current;}
    throw new Error("Missing return statement in function");
  }

  final public ExpressionNode expression0() throws ParseException {
  ExpressionNode base = null;
  ExpressionNode current;
  ArrayList<ExpressionNode> arguments = null;
  Token name;
    current = atomicExpression();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DOT:
        ;
        break;
      default:
        jj_la1[22] = jj_gen;
        break label_12;
      }
      jj_consume_token(DOT);
      name = jj_consume_token(ID);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PARAN_OPEN:
        arguments = argumentList();
        break;
      default:
        jj_la1[23] = jj_gen;
        ;
      }
          if (arguments != null) {
                current = new MethodInvocationExpressionNode(current, tokenify(name), arguments, generatePosition(name));
                arguments = null;
          } else {
                current = new FieldMemberExpressionNode(current, tokenify(name), generatePosition(name));
          }
    }
    {if (true) return current;}
    throw new Error("Missing return statement in function");
  }
